# DaoJones

./: README.md  package.json
backend/: README.MD  addresses.json  app.py  pyproject.toml
client/: Dockerfile  README.md  docker-compose.yml  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  webpack.config.js
client/public/: address_score_map.json
client/src/: App.jsx  Layout.tsx  index.jsx  react-vis-graph.d.ts  styles.css
client/src/app/: Borrow.tsx  Lend.tsx  ProtocolApp.tsx
client/src/components/: BasicTable.jsx  GovernorTable.jsx  GovernorTable.tsx  Graph.tsx  Loading.tsx  Table.tsx
client/src/dao/: GovernorTable.tsx
client/src/daos/: DaoTable.tsx  whitelistedGovernorsWithSpectralData.ts
client/src/routes/: graph.tsx
client/src/spectral/: Test.tsx  getAuthedSpectralApi.ts  scheduleAndRequestSpectralScores.ts  scheduleSpectralScores.ts
client/src/tally/: apollo-client.ts  getGovernors.ts  getGovernorsSortedByProposals.ts  getWhitelistedGovernors.ts  types.ts  whitelistedGovernorsWithDelegates.ts
client/src/utils/: abi.ts  daoImageMap.ts  getDaoImages.ts  makeData.js  sample-data.ts  whitelistedGovernors.json
components/: Algorithm.js  Layout.tsx  ListItem.tsx
lens_server/: requirements.txt
pages/: testTallyApi.tsx
pages/api/spectral/: index.ts
src/components/: Layout.tsx  ListItem.tsx
src/pages/: GovernorTable.tsx  testApis.tsx
truffle/: package-lock.json
truffle-box/client/: package.json
utils/: calculate-interest.ts  getGovernors.ts  getSpectralScores.ts  scheduleSpectralScores.ts
(+17 files in other folders)
