[tool.poetry]
name = "trident-lens-service"
version = "0.1.0"
description = "Python backend to query, join, and return Lens Protocol and Spectral Finance data"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.3.0"
certifi = "^2022.12.7"
charset-normalizer = "^3.0.1"
click = "^8.1.3"
Flask = "^2.2.3"
google-api-core = "^2.11.0"
google-auth = "^2.16.2"
google-cloud-bigquery = "^3.6.0"
google-cloud-core = "^2.3.2"
google-crc32c = "^1.5.0"
google-resumable-media = "^2.4.1"
googleapis-common-protos = "^1.58.0"
grpcio = "^1.52.0"
grpcio-status = "^1.52.0"
idna = "^3.4"
importlib-metadata = "^6.0.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.2"
packaging = "^23.0"
proto-plus = "^1.22.2"
protobuf = "^4.22.0"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
python-dateutil = "^2.8.2"
requests = "^2.28.2"
rsa = "^4.9"
six = "^1.16.0"
urllib3 = "^1.26.14"
Werkzeug = "^2.2.3"
zipp = "^3.15.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
